# txpaint

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  glyph-shape-families.md
src/: app.rs  document.rs  font.rs  glyph_palette.rs  history.rs  layer.rs  main.rs  palette.rs  tile.rs
src/io/: font_import.rs  glyph_palette.rs  mod.rs  png_import.rs  xp.rs
src/renderer/: mod.rs  shader.wgsl
src/tools/: mod.rs  shape_families.rs
src/ui/: async_dialog.rs  canvas_view.rs  glyph_palette_panel.rs  glyph_picker.rs  layers_panel.rs  menu.rs  mod.rs  palette_panel.rs  tools_panel.rs
